plogapp/tests/errors/undefinedSortInSetExpr.plog
sorts

#s = {a}.
#s2 = #s1 - #s.

attributes

statements

